--- a/index.html
+++ b/index.html
@@ -15,23 +15,41 @@
             <h1>陳懿萱</h1>
         </div>
         <div class="info">
-                XXXXXXXXX
+                銘傳大學商業設計系學生，學習設計的同時偶爾產出插畫作品。擅長日系風格人物插畫。
         </div>
         <div class="works">
-            <div class="work-item item-1">
-                <img src="bg1.jpg" alt="">
-            </div>
-            <div class="work-item item-2">
-                <img src="bg2.jpg" alt="">
-            </div>
-            <div class="work-item item-3">
-                <img src="bg3.jpg" alt="">
-            </div>
-            <div class="work-item item-4">
-                <img src="bg4.jpg" alt="">
-            </div>
-        </div>
-    </div>
+        <div class="works">
+    <div class="work-item item-1">
+    <a href="bg1.jpg" target="_blank">
+        <img src="bg1.jpg" alt="">
+        <div class="overlay"></div>
+    </a>
+</div>
+
+
+    <div class="work-item item-2">
+     <a href="bg2.jpg" target="_blank">
+        <img src="bg2.jpg" alt="">
+        <div class="overlay"></div>
+    </a>
+</div>
+
+    <div class="work-item item-3">
+     <a href="bg3.png" target="_blank">
+        <img src="bg3.png" alt="">
+        <div class="overlay"></div>
+    </a>
+</div>
+
+    <div class="work-item item-4">
+     <a href="bg4.png" target="_blank">
+        <img src="bg4.png" alt="">
+        <div class="overlay"></div>
+    </a>
+</div>
+</div>
+
+
 
 
     <div class="top">
